--- a/recipes/style.css
+++ b/recipes/style.css
@@ -18,3 +18,9 @@ h1{
     font-weight: 800;
     background-color: chocolate;
 }
+
+.img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
