--- a/recipes/style.css
+++ b/recipes/style.css
@@ -6,11 +6,19 @@ p {
 
 ul {
     background-color: limegreen;
+    height: 285px;
+    width: 450px;
+    padding-left: 20px;
+    padding-top: 5px;
 }
 
 ol{
     background-color: black;
     color: white;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
 }
 
 h1{
@@ -23,4 +31,5 @@ h1{
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
 }
